--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,6 @@
     <h2>{{ session['visits'] }}</h2>
     <input type="button" value="Reload Page" onclick="window.location.reload();">
     <a href="/add"><input type="submit"  name="add" value="Add"></a>
-    <a href="/clear"><input type="submit" name="reset" value="Reset"></a>
+    <a href="/destroy_session"><input type="submit" name="reset" value="Reset"></a>
 </body>
 </html>
